fix white space bug in textarea

--- a/app/assets/stylesheets/cover-maker.css
+++ b/app/assets/stylesheets/cover-maker.css
@@ -205,6 +205,10 @@ a:hover{
 
 /*  poster-other-area  */
 
+textarea {
+	white-space: nowrap;
+}
+
 textarea:hover {
 	background-color: #CCFF66;
 }
